# stm32f411e-disco

./: .gitignore  Cargo.toml  Embed.toml  README.md  memory.x  openocd.gdb
examples/: gpio_hal_blinky.rs  gpio_hal_busy_blinky.rs  i2c_hal_ssd1306alphabeter.rs  i2c_hal_ssd1306helloworld.rs  itm.rs  mems.rs  mems1.rs  serial_echo.rs  serial_panic.rs
src/: compass.rs  gyroscope.rs  led.rs  lib.rs
