[package]
edition = "2018"
authors = ["Daniel Egger <daniel@eggers-club.de>", "Román Cárdenas <rcardenas@upm.es>"]
categories = [
    "embedded",
    "no-std",
]
description = "Board support crate for the STM32F411E DISCOVERY microcontroller board"
documentation = "https://docs.rs/crate/stm32f411e-disco"
keywords = [
    "arm",
    "cortex-m",
    "template",
]
license = "0BSD"
name = "stm32f411e-disco"
repository = "https://github.com/greenlsi/stm32f411e-disco"
version = "0.4.1"
readme = "README.md"

[package.metadata.docs.rs]
features = []
targets = ["thumbv7em-none-eabihf"]

[dependencies]
accelerometer = "0.11.0"
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
lis302dl = "0.1.0"
lsm303dlhc = "0.2.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"

[dependencies.stm32f4xx-hal]
default-features = false
features = ["rt", "stm32f411"]
version = "0.9.0"

[dev-dependencies]
ssd1306 = "0.5.2"
nb = "1.0"
panic-halt = "0.2"
panic-itm = "0.4"

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"

[dependencies.panic-itm]
version = "0.4.2"
